Criação de Conteúdo

--- a/index.html
+++ b/index.html
@@ -32,20 +32,54 @@
                 </div>
                 
             </div>
-        </header>
+        </header>        
         <div class="container">
             <div class="row">
-                <div class="col-6">
-                    <h1>Busque, crie, participe e compartilhe tudo isso com
-seus amigos.</h1>
-                    <h2>Eventos</h2>
-                    <h2>Vagas</h2>
-                    <h3>Um app desenvolvido especialmente para criativos, onde a matéria prima são as boas ideias. Explore um mundo totalmente novo, com uma interface intuitiva e fácil navegar. Busque, crie, participe, salve e compartilhe tudo isso com suas redes sociais, grupos favoritos.</h3>
+                <div class="col">
+                  <img src="images/iPhone6-Branco_Eventos.png" class="img-fluid">
+                  <img src="images/iphone6-branco_vagas.png" class="img-fluid">
+                </div>
+                <div class="col">
+                  Busque, crie, participe e compartilhe tudo isso com seus amigos.
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                  Eventos: Acompanhe as notificações no app e fique antenado com os melhores eventos.
+                </div>
+            <div class="col">
+                  Vagas: As melhores oportunidades do mercado criativo estão ao seu alcance agora.
+            </div>
+                <div class="col">
+                  Um app desenvolvido especialmente para criativos, onde a matéria prima são as boas ideias. Explore um mundo totalmente novo, com uma interface intuitiva e fácil navegar. Busque, crie, participe, salve e compartilhe tudo isso com suas redes sociais, grupos favoritos.
                 </div>
             </div>
         </div>
-        <div class="container"></div>
-        <div class="container"></div>
+        <div class="container">
+        <div class="row">
+            <div class="col">
+            <div class="baixar-app">Escolha o seu sistema e
+baixe o app agora. É grátis!
+            </div>
+            </div>
+            <div>
+                <div class="col">
+                <img src="images/monitor.png">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+             1 de 3
+            </div>
+            <div class="col">
+             2 de 3
+            </div>
+            <div class="col">
+             3 de 3
+            </div>
+        </div>
+        </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
