Criação de Conteúdo 2

--- a/index.html
+++ b/index.html
@@ -40,45 +40,68 @@
                   <img src="images/iphone6-branco_vagas.png" class="img-fluid">
                 </div>
                 <div class="col">
-                  Busque, crie, participe e compartilhe tudo isso com seus amigos.
+                    <h1>
+                  Busque, crie, participe e compartilhe tudo isso com seus amigos.</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                  Eventos: Acompanhe as notificações no app e fique antenado com os melhores eventos.
+                <h2>
+                  Eventos: Acompanhe as notificações no app e fique antenado com os melhores eventos.</h2>
                 </div>
             <div class="col">
-                  Vagas: As melhores oportunidades do mercado criativo estão ao seu alcance agora.
+                <h2>
+                  Vagas: As melhores oportunidades do mercado criativo estão ao seu alcance agora.</h2>
             </div>
+                <h3>
                 <div class="col">
                   Um app desenvolvido especialmente para criativos, onde a matéria prima são as boas ideias. Explore um mundo totalmente novo, com uma interface intuitiva e fácil navegar. Busque, crie, participe, salve e compartilhe tudo isso com suas redes sociais, grupos favoritos.
                 </div>
+                </h3>
             </div>
         </div>
         <div class="container">
         <div class="row">
-            <div class="col">
+            <div>
+                <h1>
             <div class="baixar-app">Escolha o seu sistema e
 baixe o app agora. É grátis!
             </div>
+                </h1>
             </div>
             <div>
-                <div class="col">
-                <img src="images/monitor.png">
+                <div>
+                <img src="images/download.png" class="img-fluid">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-             1 de 3
+                <img src="images/google-play.png">
             </div>
             <div class="col">
-             2 de 3
-            </div>
-            <div class="col">
-             3 de 3
+                <img src="images/app-store.png">
             </div>
         </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <img src="images/marca-creativeland-2.png">
+                </div>
+                <div class="col">
+                    <img src="images/icon-facebook.png">
+                    <img src="images/icon-google.png">
+                    <img src="images/icon-linkedin.png">
+                    
+                </div>
+                <div class="col">
+                    <h3>Quem somos: Nullam ut lorem luctus, porttitor massa a, tristique tortor. Phasellus justo nisi, tincidunt ac est sed, maximus lobortis sem. Proin elementum dolor ac turpis fermentum, ut aliquam purus pretium.</h3>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h3 class="footer">Copyright© - 2018 - Creativeland® - Todos os direitos reservados.</h3>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
