Criação de Conteudo - Footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ baixe o app agora. É grátis!
             </div>
         </div>
         </div>
-        <div class="container">
+        <div class="container" class="footer-conteudo">
             <div class="row">
                 <div class="col">
                     <img src="images/marca-creativeland-2.png">
@@ -96,7 +96,7 @@ baixe o app agora. É grátis!
                     
                 </div>
                 <div class="col">
-                    <h3>Quem somos: Nullam ut lorem luctus, porttitor massa a, tristique tortor. Phasellus justo nisi, tincidunt ac est sed, maximus lobortis sem. Proin elementum dolor ac turpis fermentum, ut aliquam purus pretium.</h3>
+                    <h3>Quem somos: Nullam ut lorem luctus, porttitor massa a, tristique tortor.</h3>
                 </div>
             </div>
         </div>
